--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <a href="./imdd/imd/index.html">hw</a>
+    <a href="./imd/index.html">hw</a>
   </body>
 </html>
