--- a/imd/index.html
+++ b/imd/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
   </head>
-  <title>Mixed Shape Simple</title>
+  <title>Mixed Shape</title>
   <style>
     * {
       margin: 0;
