--- a/imd/index.html
+++ b/imd/index.html
@@ -20,9 +20,9 @@
     <div id="sketch"></div>
     <script src="https://cdn.jsdelivr.net/npm/matter-js@0.18.0/build/matter.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.4.2/lib/p5.js"></script>
-    <script src="./Rect.js"></script>
-    <script src="./Polygon.js"></script>
-    <script src="./Circle.js"></script>
-    <script src="./mixedShape.js"></script>
+    <script src="./circle.js"></script>
+    <script src="./polygons.js"></script>
+    <script src="./rect.js"></script>
+    <script src="./mixedshape.js"></script>
   </body>
 </html>
